--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,39 @@
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  margin-top: 30px;
+}
+
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0px !important;
+  box-sizing: border-box;
+}
+
+main {
+  border: 2px solid red;
+  width: 500px;
+  height: 900px;
+
+  margin: auto;
+  box-sizing: border-box;
   text-align: center;
+  color: black;
+
+  background: linear-gradient(90deg, rgba(148,186,254,1) 0%, rgba(142,249,167,1) 100%);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+@media (max-width: 800px) {
+  body {margin-top: 0px !important;}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  main {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
