--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ main {
   box-sizing: border-box;
   text-align: center;
   color: black;
+  position: relative;
 
   background: linear-gradient(90deg, rgba(148,186,254,1) 0%, rgba(142,249,167,1) 100%);
 }
