--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   margin-top: 30px;
 }
 
-#root {
+#root, h1, h2, h3, p {
   margin: 0 auto;
   padding: 0px !important;
   box-sizing: border-box;
