--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -21,13 +21,13 @@
   height: 52px;
   border-radius: 30%;
 
-  border: 2px solid #01347C;
-  color: #01347C;
+  border: 2px solid  #184d97;
+  color:  #184d97;
   text-decoration: none;
 }
 
 .navbar nav a.active {
   color: aliceblue;
-  background-color: #01347C;
+  background-color: #184d97;
   transition: .2s;
 }
