--- a/src/css/StorePage.css
+++ b/src/css/StorePage.css
@@ -7,6 +7,7 @@ header {
 }
 
 header h1 {
+  font-size: 1.6em;
   margin: 25px auto 20px auto;
 }
  
@@ -64,6 +65,7 @@ header h1 {
 .content-box h2 {
   text-align: start;
   margin-bottom: 3px;
+  font-size: 1.2rem;
 }
 
 .content-box p.desc {
@@ -78,11 +80,11 @@ header h1 {
 }
 
 .price-box p {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .price-box span {
-  font-size: .9em;
+  font-size: .8em;
   text-decoration:line-through;
   opacity: .6;
 }
