--- a/src/css/StorePage.css
+++ b/src/css/StorePage.css
@@ -11,14 +11,30 @@ header h1 {
   margin: 25px auto 20px auto;
 }
  
+.searchbar-div {
+  position: relative;
+  display: flex;
+  flex-grow: 1;
+}
+
+.searchbar-div img{
+  position: absolute;
+  right: 35px;
+  top: 19px;
+
+  opacity: .6;
+  
+  width: 25px;
+}
+
 #searchBar {
   flex-grow: 1;
+  height: 40px;
   border-radius: 10px;
-  margin: 0px 10px 10px 10px;
   background-color: rgba(240, 248, 255, 0.65);
   border: 1px solid #0000003a;
-  padding: 0px 15px;
-  margin:  0px 25px 10px 25px;
+  padding: 0px 15px 0px 20px;
+  margin:  10px 15px 10px 15px;
 }
 
 #searchBar:focus {
@@ -29,10 +45,10 @@ header h1 {
 .productCard {
   background-color: rgba(240, 248, 255, 0.65);
   border: 1px solid #0000003a;
-  height: 120px;
+  height: 100px;
   padding: 10px;
   border-radius: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 6px;
 
   display: flex;
 }
@@ -42,12 +58,13 @@ header h1 {
   height: 90%;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  padding-bottom: 110px;
+  padding-top: 16px;
+  padding-bottom: 150px;
 }
 
 .image-box {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   overflow: hidden;
   border-radius: 5px;
 }
@@ -91,8 +108,12 @@ header h1 {
 
 .review-box {
   position: absolute;
-  left: 25px;
+  left: 20px;
   bottom: 0px;
+}
+
+.review-box img {
+  width: 13px;
 }
 
 /* SCROLL */
