--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -14,3 +14,12 @@ header.page-header {
   width: 100%;
   height: 145px;
 }
+
+header.page-header h1{
+  font-size: 1.6em;
+  margin: 35px auto 10px auto;
+}
+
+.middle-section {
+  border-radius: 25px 25px 25px 25px;
+}
