--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 }
 
 main {
-  border: 2px solid red;
+  border: 2px solid rgb(0, 0, 0);
   width: 500px;
   height: 900px;
 
@@ -39,4 +39,21 @@ main {
     min-height: 100vh;
     border: 2px solid transparent;
   }
+}
+
+footer {
+  width: 500px;
+  margin: auto;
+  text-align: center;
+  margin-top: 7px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #d1d1d196;
+  font-size: .8em;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
