--- a/src/css/StorePage.css
+++ b/src/css/StorePage.css
@@ -113,14 +113,15 @@ header {
 
 /* SCROLL */
 
-.store-section::-webkit-scrollbar {
+.store-section::-webkit-scrollbar,
+.account-section::-webkit-scrollbar {
   display: none;
 }
 .store-section::-webkit-scrollbar-track {
 	background: #1b1a1a;
 }
-.store-section::-webkit-scrollbar-thumb
-html {
+.store-section::-webkit-scrollbar-thumb html,
+.account-section::-webkit-scrollbar-thumb html {
 	scroll-behavior: smooth;
 }
 
