--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,11 @@ main {
     width: 100%;
     height: 90%;
     min-height: 100vh;
-    border: 2px solid transparent;
+    border: 0px solid transparent;
+  }
+
+  footer {
+    display: none;
   }
 }
 
