--- a/src/css/AccountPage.css
+++ b/src/css/AccountPage.css
@@ -22,10 +22,16 @@ section.account-section.account-page {
 }
 
 .account-page .image-box {
-  border-radius: 50%;
   width: 120px;
-  height: 120px;
 }
+
+.account-page .image-box img {
+  width: 100%;
+  height: 100%;
+  max-height: 1005;
+  border-radius: 50%;
+}
+
 
 .account-page .content-box h2 {
   font-size: 1.5em;
@@ -75,7 +81,8 @@ section.account-section.account-page {
   flex-basis: 0;
   flex-wrap: wrap;
   margin-bottom: 0px !important;
-  padding: 16px 0px;
+  display: flex;
+  align-items: center;
 }
 
 .options .option svg {
@@ -108,4 +115,11 @@ section.account-section.account-page {
   padding: 5px;
   box-sizing: border-box;
   margin-top: 25px;
+}
+
+@media (max-width: 500px) {
+  .account-section .options {
+    padding: 10px 10px;
+    margin-bottom: 10px;
+  }
 }
