--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,12 @@ footer a:hover {
   text-decoration: underline;
 }
 
+.map-section {
+  height: 81%;
+  padding: 0px;
+  top: 100px;
+}
+
 #map {
-  height: 100%;
+ height: 100%;
 }
