fix: Pages visual bugs

--- a/src/css/AccountPage.css
+++ b/src/css/AccountPage.css
@@ -51,6 +51,7 @@ section.account-section.account-page {
 
 .account-page .review-box img {
   width: 20px;
+  height: 100%;
 }
 
 .account-section .option {
