--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@ main {
   main {
     width: 100%;
     /* height: 90%; */
-    /* min-height: 100vh; */
+    height: 100vh;
+    max-height: 100vh;
     border: 0px solid transparent;
   }
 
@@ -60,15 +61,4 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
-}
-
-.map-section {
-  height: 81%;
-  padding: 0px;
-  top: 100px;
-  border-radius: 0px;
-}
-
-#map {
- height: 100%;
 }
