--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --doc-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -46,7 +50,7 @@ main {
   #root {
     width: 100%;
     height: 100vh;
-    max-height: 100vh;
+    height: var(--doc-height);
     border: 0px solid transparent;
   }
 
