--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,21 +1,16 @@
 .navbar {
-  width: 100%;
   height: 70px;
   background-color: aliceblue;
 
-  z-index: 999;
   box-shadow: rgba(36, 36, 39, 0.6) 0px 7px 12px 0px;
-  position: absolute;
   
   /* Debug */
   /* opacity: 0;  */
-}
 
-nav.navbar {
   display: flex;
   justify-content: space-around;
 
-  padding: 8px 20px 15px;
+  padding: 8px 20px;
 }
 
 nav.navbar a {
