--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,11 +1,7 @@
-.navbar {
+nav.navbar {
   height: 70px;
   background-color: aliceblue;
-
   box-shadow: rgba(36, 36, 39, 0.6) 0px 7px 12px 0px;
-  
-  /* Debug */
-  /* opacity: 0;  */
 
   display: flex;
   justify-content: space-around;
