--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1,8 +1,7 @@
 section {
-  position: absolute;
   box-sizing: border-box;
+  margin-top: 10px;
   width: 100%;
-  top: 155px;
 
   background-color: rgba(240, 248, 255, 0.65);
   border-radius: 25px 25px 0px 0px;
