--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
-:root {
-  --doc-height: 100%;
+html {
+  --doc-height: 100vh;
+  --doc-height-less-menu: calc(100vh - 70px);
+}
+
+#root, h1, h2, h3, p {
+  margin: 0 auto;
+  padding: 0px !important;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,16 +20,11 @@ body {
   margin-top: 30px;
 }
 
-#root, h1, h2, h3, p {
-  margin: 0 auto;
-  padding: 0px !important;
-  box-sizing: border-box;
-}
-
-#root {
+#root  {
   border: 2px solid rgb(0, 0, 0);
   width: 500px;
   height: 900px;
+  max-height: var(--doc-height);
 
   margin: auto;
   box-sizing: border-box;
@@ -34,24 +36,31 @@ body {
   background: linear-gradient(90deg, rgba(148,186,254,1) 0%, rgba(142,249,167,1) 100%);
 }
 
-main {
-  box-sizing: border-box;
-  width: 100%;
-  height: calc(100% - 70px);
-  overflow: hidden;
+footer {
+  width: 500px;
+  margin: auto;
+  text-align: center;
+  margin-top: 7px;
+}
+footer a {
+  text-decoration: none;
+  color: #d1d1d196;
+  font-size: .8em;
+}
+footer a:hover {
+text-decoration: underline;
 }
 
-.hidden {
-  display: none;
-}
 
 @media (max-width: 800px) {
-  body {margin-top: 0px !important;}
+  body {
+    margin-top: 0px !important;
+  }
 
   #root {
     width: 100%;
     height: 100vh;
-    height: var(--doc-height);
+    max-height: 100vh;
     border: 0px solid transparent;
   }
 
@@ -60,19 +69,7 @@ main {
   }
 }
 
-footer {
-  width: 500px;
-  margin: auto;
-  text-align: center;
-  margin-top: 7px;
-}
-
-footer a {
-  text-decoration: none;
-  color: #d1d1d196;
-  font-size: .8em;
-}
-
-footer a:hover {
-  text-decoration: underline;
+/* Special Class */
+.hidden {
+  display: none !important;
 }
