--- a/src/css/AccountPage.css
+++ b/src/css/AccountPage.css
@@ -3,6 +3,7 @@
 }
 
 .account-page .middle-section {
+  top: 110px;
   height: 180px;
   display: flex;
   align-items: center;
@@ -11,12 +12,12 @@
 }
 
 .account-page section.account-section {
+  top: 300px;
   display: block;
   height: 80%;
-  max-width: 200%;
+  max-width: 100%;
   padding-top: 16px;
-  padding-bottom: 20px;
-  overflow-y: auto;
+  padding-bottom: 200px;
 }
 
 .account-page .image-box {
@@ -106,7 +107,7 @@
   text-decoration: underline;
 }
 
-.middle-section.account-page .option {
+.account-page .middle-section .option {
   border: 1px solid #0000003a;
   width: 140px;
   height: 35px;
