--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1,14 +1,18 @@
 section {
+  position: absolute;
   box-sizing: border-box;
-  margin-top: 10px;
   width: 100%;
-
+  /* top: 155px; */
+  
   background-color: rgba(240, 248, 255, 0.65);
   border-radius: 25px 25px 0px 0px;
   padding: 25px 15px 20px 15px;
+  margin: 10px 0px 0px 0px;
 }
 
 header.page-header {
+  /* position: sticky; */
+  /* top: 0px; */
   background-color: rgba(240, 248, 255, 0.85);
   width: 100%;
   height: 145px;
@@ -21,4 +25,8 @@ header.page-header h1{
 
 .middle-section {
   border-radius: 25px 25px 25px 25px;
+}
+
+.home-page button {
+  opacity: 0;
 }
