--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ text-decoration: underline;
   #root {
     width: 100%;
     height: 100vh;
-    max-height: 100vh;
+    height: var(--doc-height);
     border: 0px solid transparent;
   }
 
