--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1,26 +1,29 @@
+header.page-header {
+  background-color: rgba(240, 248, 255, 0.85);
+  width: 100%;
+  height: 100px;
+  
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header.page-header h1{
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 10px;
+  font-size: 1.6em;
+}
+
 section {
   position: absolute;
   box-sizing: border-box;
   width: 100%;
-  /* top: 155px; */
   
-  background-color: rgba(240, 248, 255, 0.65);
-  border-radius: 25px 25px 0px 0px;
   padding: 25px 15px 20px 15px;
   margin: 10px 0px 0px 0px;
-}
-
-header.page-header {
-  /* position: sticky; */
-  /* top: 0px; */
-  background-color: rgba(240, 248, 255, 0.85);
-  width: 100%;
-  height: 145px;
-}
-
-header.page-header h1{
-  font-size: 1.6em;
-  margin: 35px auto 10px auto;
+  background-color: rgba(240, 248, 255, 0.65);
+  border-radius: 25px 25px 0px 0px;
 }
 
 .middle-section {
