--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,17 @@ text-decoration: underline;
 .hidden {
   display: none !important;
 }
+
+/* SCROLL */
+.store-section::-webkit-scrollbar,
+.account-section::-webkit-scrollbar,
+*::-webkit-scrollbar {
+  display: none;
+}
+.store-section::-webkit-scrollbar-track {
+	background: #1b1a1a;
+}
+.store-section::-webkit-scrollbar-thumb html,
+.account-section::-webkit-scrollbar-thumb html {
+	scroll-behavior: smooth;
+}
