--- a/src/css/AccountPage.css
+++ b/src/css/AccountPage.css
@@ -1,7 +1,17 @@
 /* Header */
 
-.account-page header.page-header {
-  height: 100px;
+.account-page .page-header,
+.cart-page .page-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.account-page .page-header div,
+.cart-page .page-header div {
+  width: 80px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .account-page .middle-section {
