--- a/src/css/HomePages.css
+++ b/src/css/HomePages.css
@@ -5,6 +5,9 @@ section {
 .home-section h2{
   font-size: 1.2rem;
   margin-bottom: 10px;
+  font-family: 'Maven Pro', sans-serif;
+  color: #2873b1;
+  font-weight: 500;
 }
 
 .products-inline {
