--- a/src/css/AccountPage.css
+++ b/src/css/AccountPage.css
@@ -2,7 +2,8 @@
 
 .account-page .page-header,
 .cart-page .page-header,
-.requests-page .page-header
+.requests-page .page-header,
+.favorites-page .page-header
 {
   display: flex;
   justify-content: space-between;
@@ -10,7 +11,8 @@
 
 .account-page .page-header div,
 .cart-page .page-header div, 
-.requests-page .page-header div 
+.requests-page .page-header div,
+.favorites-page .page-header div
 {
   width: 80px;
   height: 100%;
