--- a/src/css/AccountPage.css
+++ b/src/css/AccountPage.css
@@ -72,6 +72,10 @@
   height: 100%;
 }
 
+.option {
+  cursor: pointer;
+}
+
 .account-page .middle-section .option {
   border: 1px solid #0000003a;
   width: 140px;
@@ -82,6 +86,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.account-page .option:active {
+  scale: .96;
+  transition: .2s;
+  filter: brightness(90%);
 }
 
 .account-section .option {
