--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,11 @@ section {
   height: 100%;
 }
 
+section > p {
+  margin-top: 10px;
+  opacity: .8;
+}
+
 header.page-header h1 {
   font-family: 'Maven Pro', sans-serif;
   color: #2873b1;
