--- a/src/App.css
+++ b/src/App.css
@@ -51,35 +51,17 @@ header.page-header h1 {
   font-weight: 500;
 }
 
-footer {
-  width: 500px;
-  margin: auto;
-  text-align: center;
-  margin-top: 7px;
-}
-footer a {
-  text-decoration: none;
-  color: #d1d1d196;
-  font-size: .8em;
-}
-footer a:hover {
-text-decoration: underline;
-}
-
-
 @media (max-width: 800px) {
   body {
     margin-top: 0px !important;
   }
-
   #root {
     width: 100%;
     height: 100vh;
     height: var(--doc-height);
     border: 0px solid transparent;
   }
-
-  footer {
+  body > footer {
     display: none;
   }
 }
