--- a/src/css/initial-style.css
+++ b/src/css/initial-style.css
@@ -5,7 +5,6 @@ body {
   background-color: #242424;
   margin-top: 30px;
 }
-
 #root  {
   border: 2px solid rgb(0, 0, 0);
   width: 500px;
@@ -15,7 +14,6 @@ body {
   box-sizing: border-box;
   background: linear-gradient(90deg, rgba(148,186,254,1) 0%, rgba(142,249,167,1) 100%);
 }
-
 .loading-div {
   width: 100%;
   height: 100%;
@@ -32,6 +30,21 @@ body {
   height: 60px;
   width: 60px;
   margin: auto;
+}
+footer {
+  width: 300px;
+  margin: auto;
+  text-align: center;
+  margin-top: 8px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+footer a {
+  text-decoration: none;
+  color: #d1d1d196;
+  font-size: .9em;
+}
+footer a:hover {
+text-decoration: underline;
 }
 
 @keyframes is-rotating {
